<resources>
    <string name="app_name">App Story</string>
    <string name="message_login_page">Masuk dan Ceritakan ceritamu yukk!!!</string>
    <string name="title_login_page">Punya Cerita Apa Hari ini ??</string>
    <string name="error_email">Masukkan Email Valid</string>
    <string name="email_kosong">Email Tidak Boleh Kosong</string>
    <string name="minimal_password">Password Harus Minimal 8 Character</string>
    <string name="hint_password">Masukkan Password Anda</string>
    <string name="hint_email">Masukkan Email Anda</string>
    <string name="hint_username">"Masukkan Nama Anda "</string>
    <string name="title_register_page">Punya Cerita Menarik</string>
    <string name="message_register_page">Yuk Buat Akun Dulu</string>
    <string name="atau_login">Sudah Ada Akun ? Yuk Login !!</string>
    <string name="atau_register">"Belum Punya Akun ? Yuk Daftar !! "</string>
    <string name="title_menu_1">Punya Banyak Cerita</string>
    <string name="title_menu_2">Butuh Motivasi dan Hiburan ?</string>
    <string name="title_menu_3">Bosan Hanya Baca Cerita?</string>
    <string name="title_menu_4">Tunggu Apalagi di Klik Buttonnya</string>
    <string name="desc_menu_1">Yuk Ekspresikan Ceritamu Di sini </string>
    <string name="desc_menu_2">Tenang disini tempatnya orang bercerita.</string>
    <string name="desc_menu_3">Lihat Cerita serta Gambar Orang disini dan Tambahkan Foto di Ceritamu</string>
    <string name="desc_menu_4">Bagikan Cerita Kamu Dengan Bebas</string>
    <string name="mulai_sekarang">Yuk Mulai Sekarang!!</string>
    <string name="name_tidak_kosong">Nama Tidak Boleh Kosong</string>
    <string name="email_tidak_kosong">Email Tidak Boleh Kosong</string>
    <string name="password_minimal">Password tidak boleh kosong</string>
    <string name="story_picture">Gambar Story</string>
    <string name="username">Nama User</string>
    <string name="captiontext">Caption Story</string>
    <string name="logout">Log Out</string>
    <string name="dibutuhkan_izin">Dibutuhkan Izin Menggunakan Camera</string>
    <string name="story_baru">Tambah Story</string>
    <string name="keluar">keluar</string>
    <string name="peringatan">Yakin Keluar ? Ceritanya Masih Banyak Loh!!</string>
    <string name="yakin">Yakin Dong</string>
    <string name="batal">Gak Jadi Deh</string>
    <string name="detail_gambar">Detail Gamabr</string>
    <string name="camera_x">Camera X</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="gambar_diambil">Hasil Gambar</string>
    <string name="button_gallery">Buka Galery</string>
    <string name="deskripsi">Masukkan deskripsi cerita anda disini</string>
    <string name="tambah">Tambah Cerita</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tidak_dapat_ijin">Aplikasi TIdak Mendapat Izin Untuk Menggunakan Fitur Ini</string>
    <string name="peringatan1">Peringatan!!</string>
    <string name="ok">OK</string>
    <string name="pilih_photo">Silahkan Pilih Photo</string>
    <string name="kamera_gagal">Gagal Menampilkan Camera</string>
    <string name="gagal_ambil_gambar">Gagal Mengambil Gambar</string>
    <string name="berhasil_ambil_gambar">Berhasil Mengambil Gambar</string>
    <string name="silahkan">Silakan masukkan berkas gambar terlebih dahulu</string>
    <string name="berhasil_upload">Berhasil Mengupload Cerita</string>
    <string name="maps">Maps</string>
    <string name="ulang">Ulangi</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
</resources>